Font changes. Also displays bpm for tempo

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -1,8 +1,8 @@
 navbar {
   display: block;
-  background: black;
-  border-bottom: 1px solid black;
-  box-shadow: 1px 1px 14px -3px black;
+  background: #222222;
+  border-bottom: 1px solid #222222;
+  box-shadow: 1px 1px 14px -3px #222222;
   height: 45px;
 
   .container {
