can now toggle different graphs

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,6 +14,14 @@ body {
   }
 }
 
+.btn-group {
+  float: right;
+  padding: 20px 20px 0 0;
+  .btn {
+    border-radius: 0;
+  }
+}
+
 #main {
   margin: 0 auto;
 }
