--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,6 +14,11 @@ body {
   }
 }
 
+#albumImage {
+  width: 50px;
+  margin-left: 40px;
+}
+
 .btn-group {
   float: right;
   padding: 20px 20px 0 0;
@@ -24,6 +29,18 @@ body {
 
 #main {
   margin: 0 auto;
+}
+
+#toggles {
+  button {
+    background-color: #59b300;
+    border-color: #009900;
+    border-width: 1px;
+  }
+  span {
+    padding-left: 20px;
+    color: white;
+  }
 }
 
 * {
