--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -10,10 +10,16 @@
     <script src="/angular/angular.js"></script>
     <script src="/angular-spotify/dist/angular-spotify.min.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
+    <script type="text/javascript" src="/angular-spinner/angular-spinner.min.js"></script>
+    <script type="text/javascript" src="/angular-loading-spinner/angular-loading-spinner.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
+    <link rel="stylesheet" href="/material-design-lite/material.min.css">
+    <script src="/material-design-lite/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.light_green-green.min.css">
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
