--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -37,19 +37,13 @@ navbar {
     }
   }
 
-  .login-button {
-    float: right;
-    border: 3px solid rgba(65, 128, 65, 0.49);
-    margin-top: 4px;
-    padding: 5px 10px;
-    background: #00BF02;
-    outline: none !important;
-    color: white;
-    border-radius: 25px;
-    &:hover {
-      background: #00AA22;
-      color: white;
-    }
+  #login-container {
+    margin: auto auto;
+  }
+
+  #spotify-icon {
+    width: 40px;
+    padding: 0px;
   }
 
   .welcome {
@@ -70,4 +64,24 @@ navbar {
     }
   }
 
+  a.login-button {
+    display: block;
+    text-align: center;
+    width: 300px;
+    font-size: 25px;
+    border: 3px solid rgba(65, 128, 65, 0.49);
+    padding: 5px 10px;
+    margin: 30vh auto;
+    background: #00BF02;
+    outline: none !important;
+    color: white;
+    border-radius: 50px;
+    &:hover {
+      background: #00AA22;
+      color: white;
+    }
+  }
+
 }
+
+
