--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -20,11 +20,14 @@ body {
 }
 
 .btn {
+    background-color: #59b300;
     border-radius: 0;
     margin-left: 1px;
     float: right;
-
+    border-radius: 2px;
+    border: none;
   }
+
 
 #chart {
   height: 100vh;
@@ -35,10 +38,11 @@ body {
 }
 
 #toggles {
-  button {
-    background-color: #59b300;
-    border: none;
-    border-radius: 2px;
+  button.btn.btn-success {
+    &:focus, &:hover, &:active, .active {
+    background-color: #399300;
+    outline: none;
+    }
   }
   span {
     padding-left: 20px;
@@ -60,26 +64,8 @@ body {
 	padding-left: 0;
 }
 
-sidebar {
-  position: fixed;
-  background: #303030;
-  height: 80.5vh;
-  width: inherit;
-  overflow-y: scroll;
-  border-right: 2px solid #555; }
-  sidebar .logo {
-    width: 100%;
-    padding: 15px; }
-  sidebar section > * {
-    padding: 0 15px; }
-  sidebar .menu-item {
-    transition: border-left, 0.2s; }
-    sidebar .menu-item a {
-      color: #c8c8c8; }
-      sidebar .menu-item a:hover {
-        color: white; }
-    sidebar .menu-item.active, sidebar .menu-item:hover {
-      border-left: 3px solid #00bc8c; }
+
+
 
 footer {
   position: fixed;
