--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -43,7 +43,7 @@ navbar {
 
   #spotify-icon {
     width: 40px;
-    padding: 0px;
+    padding: 0 5px 2px 0;
   }
 
   .welcome {
@@ -68,6 +68,7 @@ navbar {
     display: block;
     text-align: center;
     width: 300px;
+    height: 55px;
     font-size: 25px;
     border: 3px solid rgba(65, 128, 65, 0.49);
     padding: 5px 10px;
