--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -37,6 +37,19 @@ navbar {
     }
   }
 
+  .title {
+  font-family: Arial Black;
+  font-size: 80px;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+}
+
+.subtitle {
+  font-size: 15px;
+  text-decoration: italics;
+  }
+
   #login-container {
     margin: auto auto;
   }
@@ -72,7 +85,7 @@ navbar {
     font-size: 25px;
     border: 3px solid rgba(65, 128, 65, 0.49);
     padding: 5px 10px;
-    margin: 30vh auto;
+    margin: 10vh auto;
     background: #00BF02;
     outline: none !important;
     color: white;
