--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -37,29 +37,36 @@ navbar {
     }
   }
 
-  .title {
-  font-family: Arial Black;
-  font-size: 80px;
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-}
 
-.subtitle {
-  font-size: 15px;
-  text-decoration: italics;
+  #mytitle {
+    font-family: Arial Black;
+    font-size: 160px;
+    margin: 0 auto;
+    padding-top: 100px;
+    display: block;
+    text-align: center;
+    color: rgba(0,170,34, 0.9);
   }
 
-.giant-v {
-  font-family: Arial Black;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1000px;
-  vertical-align: baseline;
-  padding: 0;
-}
+  #mysubtitle {
+    font-size: 20px;
+    text-decoration: italics;
+    padding-top: 65px;
+    display: block;
+    text-align: center;
+    color: rgba(0,170,34, 0.9);
+    }
+
+  .giant-v {
+    font-family: Arial Black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1000px;
+    vertical-align: baseline;
+    padding: 0;
+  }
 
   #login-container {
     margin: auto auto;
