--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,6 +14,11 @@ body {
   }
 }
 
+#player {
+  position: absolute;
+  top: 50px;
+}
+
 #albumImage {
   width: 50px;
   margin-left: 22px;
@@ -37,6 +42,10 @@ body {
     top: 55px;
     width: 200px;
     float: right;
+    .active {
+      background-color: #399300;
+      outline: none;
+      }
   }
   .ui.button {
     background-color: rgba(89,179,20, .5);
@@ -44,7 +53,7 @@ body {
     float: right;
     border: none;
     margin-right: 0;
-    &:focus, &:hover, &:active, .active {
+    &:focus, &:hover, &:active {
       background-color: #399300;
       outline: none;
     }
