--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -87,10 +87,11 @@ navbar {
     span {
       color: white;
       font-size: 16px;
-      margin-right: 5px;
+      margin-right: 10px;
     }
     a {
-      color: #f30046;
+      padding-left: 10px;
+      color: #4de700;
       cursor: pointer;
     }
   }
