--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/" />
-    <title>Fullstack Academy Generated Application</title>
+    <title>Visify</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/semantic-ui/dist/semantic.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
