more minor changes to buttons etc

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -91,7 +91,7 @@ navbar {
     }
     a {
       padding-left: 10px;
-      color: #4de700;
+      color: #39CC00;
       cursor: pointer;
     }
   }
