--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -57,14 +57,14 @@ body {
       }
   }
   .ui.button {
-    background-color: rgba(40,100,03, .7);
+    background-color: #39AC00;
     display: block;
     color: black;
     float: right;
     border: none;
     margin-right: 0;
     &:focus, &:hover, &:active {
-      background-color: rgba(22,58,0, 1);
+      background-color: #399300;
       outline: none;
     }
   }
