--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
-    <script src="/angular-spotify/dist/angular-spotify.min.js"></script>
+    <!-- <script src="/angular-spotify/dist/angular-spotify.min.js"></script> -->
     <script src="/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
     <script type="text/javascript" src="/angular-spinner/angular-spinner.min.js"></script>
